--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "~3.3",
+        "laravel-admin-ext/simplemde": "^1.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
@@ -54,5 +55,11 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
