--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "autoload": {
         "classmap": [
+            "app/Libraries",
             "database/seeds",
             "database/factories"
         ],
