--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel-admin-ext/simplemde": "^1.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "sharemant/laravel-admin-ext-editormd": "^1.0"
+        "rap2hpoutre/laravel-log-viewer": "^1.3",
+        "sharemant/laravel-admin-ext-editormd": "^1.0",
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
