--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,8 @@
             "App\\": "app/"
         },
 	"files":[
-            "app/Helpers/functions.php"
-            
+            "app/Helpers/functions.php",
+            "app/Libraries/Github.php"
         ]
     },
     "autoload-dev": {
